# Rayleigh

./: .gitignore  .readthedocs.yaml  .zenodo.json  ACKNOWLEDGE  AUTHORS  CHANGELOG.md  CITATION  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  INSTALL  Jenkinsfile  Makefile  README.md  VERSION  bibtex.json  conf.py  configure  dev_build  docker-devel  docker-devel.bat  environment.yml  environment_doc.yml  environment_mac.yml  index.rst  slurm-3330838.out
.ssh/: id_rsa  id_rsa.pub
B_Bench/: main_input_0T  main_input_100T  main_input_80T
cmake/: FindFFTW.cmake  FindMKL.cmake
doc/: CMakeLists.txt  Diagnostic_Plotting.html  Makefile  Module5_Generating_Output.pptx  build_menu_pdf.py  options.dox  requirements.txt
etc/: check_ipynb_cleared  make_dirs
etc/legacy/: CMakeLists.txt  Diagnostics_Base_PRE_SECOND_DERIVS.F90  build_rayleigh  buld_rayleigh.original  find_mkl.sh  make_dirs  useful_env_functions.sh
etc/legacy/FD_DOC/: fd_notes.tex
etc/legacy/Makefiles/: Makefile  machine.Mira  machine.Nick  machine.Pleiades  object_list
etc/legacy/Makefiles/old_makefiles/: Makefile_CU  Makefile_Fermi  Makefile_LCD  Makefile_Mira  Makefile_Nick2  Makefile_Stampede
etc/legacy/cmake/: FindFFTW3.cmake
input_examples/: README  anelastic_dimensional  anelastic_nondimensional  b2010_case0_0T_input  b2010_case0_100T_input  b2010_case0_80T_input  b2010_case0_initcond  benchmark_diagnostics_input  boulder2023_model15_dim  boulder2023_model15_nd  c2001_case0_input  c2001_case0_input_pscalar  c2001_case0_minimal  c2001_case1_input  derivative_verification  j2011_hydro_minimal  (+5 more)
src/: CMakeLists.txt  Makefile  Makefile.fdeps  format_var.sh  gen_header.sh  object_list
src/Data_Structures/: Structures.F90
src/Diagnostics/: #Diagnostics_Vorticity_Field.F90#  BACKUP_Diagnostics_Base.F90  Diagnostics_ADotGradB.F90  Diagnostics_Angular_Momentum.F90  Diagnostics_Axial_Field.F90  Diagnostics_Base.F90  Diagnostics_Current_Density.F90  Diagnostics_Custom.F90  Diagnostics_Energies.F90  Diagnostics_Energy_Flux.F90  Diagnostics_Induction.F90  Diagnostics_Inertial_Forces.F90  Diagnostics_Interface.F90  Diagnostics_KE_Flux.F90  Diagnostics_Linear_Forces.F90  Diagnostics_Lorentz_Forces.F90  Diagnostics_Magnetic_Field.F90  Diagnostics_Mean_Correction.F90  Diagnostics_Miscellaneous.F90  Diagnostics_Poynting_Flux.F90  Diagnostics_Scalars.F90  Diagnostics_Second_Derivatives.F90  Diagnostics_Thermal_Energies.F90  Diagnostics_Thermal_Equation.F90  Diagnostics_Thermodynamic_Gradients.F90  Diagnostics_TurbKE_Budget.F90  Diagnostics_Velocity_Diffusion.F90  Diagnostics_Velocity_Field.F90  Diagnostics_Vorticity_Field.F90  amom_equation_codes.F  axial_field_codes.F  current_density_codes.F  induction_equation_codes.F  ke_equation_codes.F  kinetic_energy_codes.F  magnetic_energy_codes.F  magnetic_field_codes.F  mass_flux_codes.F  me_equation_codes.F  momentum_equation_codes.F  (+7 more)
src/Diagnostics/Verifications/derivatives/: main_input  verify_derivatives.ipynb
src/Diagnostics/Verifications/kinetic_helicity/: main_input  test_helicity_components.py
src/IO/: BufferedOutput.F90  General_IO.F90  MakeDir.F90_IBM  Parallel_IO.F90  Physical_IO_Buffer.F90  Physical_IO_Buffer_orig.F90  Spherical_IO.F90  cmkdir.c
src/Include/: indices.F
src/Machinefiles/: machine.Nick  machine.Pleiades  machine.Sanitas  machine.SummitCU  machine.blank
src/Machinefiles/old_makefiles/: Makefile_CIG  Makefile_Discover  Makefile_Nick  Makefile_Pleiades  Makefile_Scylla  Makefile_Standard
src/Math_Layer/: Chebyshev_Polynomials.F90  Chebyshev_Polynomials.mira_omp  Chebyshev_Polynomials_Alt.F90  Finite_Difference.F90  Fourier_Derivatives.F90  Fourier_Transform.F90  Fourier_Transform.mira_omp  Legendre_Polynomials.F90  Legendre_Transforms.F90  Legendre_Transforms.F90_oldlayout  Legendre_Transforms_newlayout.F90  Linear_Solve.F90  Math_Constants.F90  Math_Utility.F90  Ra_Precision.F90  Spectral_Derivatives.F90  Theta_Derivatives.F90  Timing.F90
src/Parallel_Framework/: All_to_All.F90  General_MPI.F90  ISendReceive.F90  Load_Balance.F90  Load_Balance.notes  MPI_Base.F90  MPI_LAYER.F90  Parallel_Framework.F90  Parallel_Framework.mira_omp  Ra_MPI_Base.F90  SendReceive.F90  Spherical_Buffer.F90  Transposes.notes
src/Parallel_Framework/reports/: read_4dc.pro  read_grid.pro  read_sr.pro
src/Physics/: Benchmarking.F90  BoundaryConditions.F90  Checkpointing.F90  ClockInfo.F90  Coeff_File.F90  Controls.F90  Fields.F90  GenericInput.F90  Generic_Input.F90  Generic_Input_New.F90  Initial_Conditions.F90  Input.F90  Linear_Terms_Cart.F90  Main.F90  PDE_Coefficients.F90  ProblemSize.F90  ReferenceState.F90  Run_Parameters.F90  Sphere_Driver.F90  Sphere_Hybrid_Space.F90  Sphere_Linear_Terms.F90  Sphere_Physical_Space.F90  Sphere_Spectral_Space.F90  Timers.F90  TransportCoefficients.F90
src/Plugins/: STABLE_plugin.F90
src/Test_Suite/: TestSuite.F90  Test_Cheby.F90  Test_SHT.F90
src/Utility/: BufferedOutput.F90  General_IO.F90  MakeDir.F90  adjust_Run_Parameters.py  cmkdir.c
src/math_layer/: Chebyshev_Polynomials.mira_omp  Chebyshev_Polynomials_Alt.F90  Finite_Difference.F90  Fourier_Transform.F90  Legendre_Polynomials.F90  Legendre_Transforms.F90_oldlayout  Legendre_Transforms_newlayout.F90  Linear_Solve.F90  Math_Constants.F90  Math_Utility.F90  Theta_Derivatives.F90  Timing.F90
src/parallel_framework/: General_MPI.F90  ISendReceive.F90  MPI_Base.F90  MPI_LAYER.F90  Makefile  Parallel_Framework.F90  Parallel_Framework.mira_omp  SendReceive.F90  Spherical_Buffer.F90  Transposes.notes
src/parallel_framework/reports/: assemble_cube.idl  assemble_cube.pro  deriv_test.idl  grid  read_4d.pro
src/physics/: Checkpointing.F90  ClockInfo.F90  Controls.F90  Fields.F90  Fields.F90_original  Initial_Conditions.F90  Input.F90  Main.F90  ReferenceState.F90  Run_Parameters.F90  Sphere_Driver.F90  Sphere_Hybrid_Space.F90  Sphere_Linear_Terms.F90  Sphere_Physical_Space.F90  Sphere_Spectral_Space.F90  Timers.F90
src/plugins/: STABLE_plugin.F90
src/python/: rayleigh_spectral_input.py
src/test_suite/: TestSuite.F90  Test_Cheby.F90  Test_SHT.F90
(+387 files in other folders)
